--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,18 +4,20 @@ akka {
 
   remote {
     log-remote-lifecycle-events = off
+    enabled-transports = ["akka.remote.netty.tcp"]
+    transport = "akka.remote.netty.NettyRemoteTransport"
     netty.tcp {
-      hostname = "127.0.0.1"
-      port = 0
+      hostname = "192.168.56.11"
+      port = 2551
     }
   }
 
   cluster {
     seed-nodes = [
-      "akka.tcp://ClusterSystem@127.0.0.1:2551",
-      "akka.tcp://ClusterSystem@127.0.0.1:2552",
-      "akka.tcp://ClusterSystem@127.0.0.1:2553",
-      "akka.tcp://ClusterSystem@127.0.0.1:2554"]
+     // "akka.tcp://ClusterSystem@192.168.56.1:2551",
+      "akka.tcp://ClusterSystem@192.168.56.11:2551",
+    //  "akka.tcp://ClusterSystem@127.0.0.1:2553",
+      "akka.tcp://ClusterSystem@192.168.56.12:2551"]
 
     auto-down-unreachable-after = 10s
   }
