scala+akka versions update

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -14,10 +14,11 @@ akka {
 
   cluster {
     seed-nodes = [
-     // "akka.tcp://ClusterSystem@192.168.56.1:2551",
       "akka.tcp://ClusterSystem@192.168.56.11:2551",
-    //  "akka.tcp://ClusterSystem@127.0.0.1:2553",
-      "akka.tcp://ClusterSystem@192.168.56.12:2551"]
+      "akka.tcp://ClusterSystem@192.168.56.12:2551",
+      "akka.tcp://ClusterSystem@192.168.56.13:2551",
+      "akka.tcp://ClusterSystem@192.168.56.14:2551",
+      "akka.tcp://ClusterSystem@192.168.56.15:2551"]
 
     auto-down-unreachable-after = 10s
   }
