Fix cluster boot start up

--- a/src/main/resources/app_debug.conf
+++ b/src/main/resources/app_debug.conf
@@ -2,6 +2,8 @@ akka {
 
   actor.provider = "akka.cluster.ClusterActorRefProvider"
 
+//  extensions = ["kamon.metric.Metrics"]
+
   remote {
     log-remote-lifecycle-events = off
     netty.tcp {
