--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,10 +2,15 @@ akka {
 
   actor.provider = "akka.cluster.ClusterActorRefProvider"
 
+//  extensions = ["kamon.metric.Metrics"]
+
   remote {
     log-remote-lifecycle-events = off
+
     enabled-transports = ["akka.remote.netty.tcp"]
     transport = "akka.remote.netty.NettyRemoteTransport"
+
+    log-frame-size-exceeding=5000b
     netty.tcp {
       hostname = "192.168.56.11"
       port = 2551
@@ -13,13 +18,6 @@ akka {
   }
 
   cluster {
-    seed-nodes = [
-      "akka.tcp://ClusterSystem@192.168.56.11:2551",
-      "akka.tcp://ClusterSystem@192.168.56.12:2551",
-      "akka.tcp://ClusterSystem@192.168.56.13:2551",
-      "akka.tcp://ClusterSystem@192.168.56.14:2551",
-      "akka.tcp://ClusterSystem@192.168.56.15:2551"]
-
     auto-down-unreachable-after = 10s
   }
 
